--- a/components/financial_assistance/app/views/financial_assistance/benefits/_insurance_kinds.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/benefits/_insurance_kinds.html.erb
@@ -13,8 +13,8 @@
 <% insurance_kinds.each do |insurance_kind| %>
   <div id="<%= insurance_kind %>"class="benefit-kind">
     <div class="row row-form-wrapper radio-align fa-text-color lightgray no-buffer row-height">
-      <div class="col-md-10 benefits-check <%= insurance_kind %>">
-        <%=check_box_tag "insurance_kind", insurance_kind, @applicant.benefits.where(kind: kind).of_insurance_kind(insurance_kind).present?, class: "benefit-checkbox" %>
+      <div class="col-md-10 benefits-check">
+        <%=check_box_tag "insurance_kind", insurance_kind, @applicant.benefits.where(kind: kind).of_insurance_kind(insurance_kind).present?, class: "benefit-checkbox", data: {cuke: "#{insurance_kind}_benefit_checkbox"} %>
         <% eligible_esi = kind == "is_eligible" && insurance_kind == 'employer_sponsored_insurance' && FinancialAssistanceRegistry.feature_enabled?(:minimum_value_standard_question) %>
         <% term = eligible_esi ? "faa.question.#{insurance_kind}_eligible" : "faa.question.#{insurance_kind}" %>
         <% if I18n.exists?("glossary."+insurance_kind) %>
@@ -28,7 +28,6 @@
     <div class="benefits-list <%= kind %>">
       <% @applicant.benefits.where(kind: kind).of_insurance_kind(insurance_kind).each do |benefit| %>
         <%if (benefit.insurance_kind == 'employer_sponsored_insurance' || benefit.insurance_kind == 'health_reimbursement_arrangement') && (kind == "is_eligible" || !EnrollRegistry[:short_enrolled_esi_forms].enabled?) %>
-         fdkgjhfdjkghdjkfghfdjkghjk
           <%= render partial: 'esi_benefit', locals: { benefit: benefit, insurance_kind: insurance_kind, kind: kind } %>
         <% else %>
           <%= render partial: 'non_esi_benefit', locals: { benefit: benefit, insurance_kind: insurance_kind, kind: kind } %>
