--- a/components/financial_assistance/app/views/financial_assistance/benefits/_insurance_kinds.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/benefits/_insurance_kinds.html.erb
@@ -27,7 +27,7 @@
 
     <div class="benefits-list <%= kind %>">
       <% @applicant.benefits.where(kind: kind).of_insurance_kind(insurance_kind).each do |benefit| %>
-        <%if (benefit.insurance_kind == 'employer_sponsored_insurance' || benefit.insurance_kind == 'health_reimbursement_arrangement') && (kind == "is_eligible" || !EnrollRegistry[:short_enrolled_esi_forms].enabled?) %>
+        <% if display_esi_fields?(benefit.insurance_kind, kind) %>
           <%= render partial: 'esi_benefit', locals: { benefit: benefit, insurance_kind: insurance_kind, kind: kind } %>
         <% else %>
           <%= render partial: 'non_esi_benefit', locals: { benefit: benefit, insurance_kind: insurance_kind, kind: kind } %>
@@ -36,7 +36,7 @@
     </div>
 
     <div class='new-benefit-form hidden <%= insurance_kind %>'>
-      <% if (insurance_kind == 'employer_sponsored_insurance' || insurance_kind == 'health_reimbursement_arrangement') && (kind == "is_eligible" || !EnrollRegistry[:short_enrolled_esi_forms].enabled?) %>
+      <% if display_esi_fields?(insurance_kind, kind) %>
         <%= render partial: 'financial_assistance/benefits/esi_benefit_form', locals: { benefit: @applicant.benefits.build, insurance_kind: insurance_kind, kind: kind} %>
       <% else %>
         <%= render partial: 'financial_assistance/benefits/non_esi_benefit_form', locals: { benefit: @applicant.benefits.build, insurance_kind: insurance_kind, kind: kind} %>
