--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -798,6 +798,12 @@ $(document).on('click', '#terms_check_thank_you', function() {
   }
 });
 
+$(document).on('keydown', 'input.thank_you_field', function() {
+  if(event.code === "Tab") {
+     event.preventDefault();
+  }
+})
+
 $(document).on('blur keyup', 'input.thank_you_field', function() {
   first_name_thank_you = $("#first_name_thank_you").val().toLowerCase().trim();
   last_name_thank_you = $("#last_name_thank_you").val().toLowerCase().trim();
