--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -786,7 +786,7 @@ $(document).on('click', '#terms_check_thank_you', function() {
   last_name_thank_you = $("#last_name_thank_you").val().toLowerCase().trim();
   subscriber_first_name = $("#subscriber_first_name").val();
   subscriber_last_name = $("#subscriber_last_name").val();
-
+  
   if($(this).prop("checked") == true){
     if( first_name_thank_you == subscriber_first_name && last_name_thank_you == subscriber_last_name){
       $('#btn-continue').removeClass('disabled');
@@ -798,10 +798,15 @@ $(document).on('click', '#terms_check_thank_you', function() {
   }
 });
 
-$(document).on('keydown', 'input.thank_you_field', function() {
-  if(event.code === "Tab") {
-     event.preventDefault();
-  }
+$(document).on('keydown', '#btn-continue', function() {
+  first_name_thank_you = $("#first_name_thank_you").val().toLowerCase().trim();
+  last_name_thank_you = $("#last_name_thank_you").val().toLowerCase().trim();
+  subscriber_first_name = $("#subscriber_first_name").val();
+  subscriber_last_name = $("#subscriber_last_name").val();
+
+  if (first_name_thank_you != subscriber_first_name || last_name_thank_you != subscriber_last_name) {
+    event.preventDefault();
+  } 
 })
 
 $(document).on('blur keyup', 'input.thank_you_field', function() {
