--- a/components/sponsored_benefits/app/views/sponsored_benefits/organizations/plan_design_proposals/plan_selections/_plan_selection_form.html.erb
+++ b/components/sponsored_benefits/app/views/sponsored_benefits/organizations/plan_design_proposals/plan_selections/_plan_selection_form.html.erb
@@ -7,6 +7,7 @@
 <%= hidden_field_tag :contribution_url, organizations_plan_design_proposal_contributions_path(plan_design_proposal.id) %>
 <%= hidden_field_tag :benefit_groups_url, organizations_plan_design_proposal_benefit_groups_path(plan_design_proposal.id) %>
 <%= hidden_field_tag :plan_comparison_url, new_organizations_plan_design_proposal_plan_comparison_path(plan_design_proposal.id) %>
+<%= hidden_field_tag :all_contribution_levels_min_met_relaxed, plan_design_proposal.all_contribution_levels_min_met_relaxed? %>
 <%= hidden_field_tag :employer_min_employee_contribution, employer_contribution_percent_minimum_for_application(plan_design_proposal) %>
 <%= hidden_field_tag :employer_min_family_contribution, family_contribution_percent_minimum_for_application(plan_design_proposal) %>
 <%= hidden_field_tag :publish_proposal_url, sponsored_benefits.organizations_plan_design_proposal_publish_path(plan_design_proposal.id) %>
