--- a/components/financial_assistance/app/views/financial_assistance/applications/verifications/_admin_verification_actions.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applications/verifications/_admin_verification_actions.html.erb
@@ -86,7 +86,7 @@
 <div class="row">
   <div class="view-history col-md-12" id=<%="#{applicant.id}-#{evidence_type.downcase.split.join('-')}-history"%>>
     <div>
-      <h5>Verification Historyyyy</h5>
+      <h5>Verification History</h5>
       <table class="table table-bordered table-hover table-responsive">
         <thead>
         <tr>
