make heading bold

--- a/components/sponsored_benefits/app/views/sponsored_benefits/organizations/plan_design_proposals/_proposal_info.html.erb
+++ b/components/sponsored_benefits/app/views/sponsored_benefits/organizations/plan_design_proposals/_proposal_info.html.erb
@@ -31,7 +31,7 @@
 <% if broker_can_create_hc4cc_quote? %>
   <div class="row no-buffer row-form-wrapper">
     <div class="col-xs-12">
-      <h4><%=l10n('osse_subsidy_title')%></h4>
+      <h4><strong><%=l10n('osse_subsidy_title')%></strong></h4>
       <p><%=l10n('osse_bqt_eligibility_description')%></p>
     </div>
 
