--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -50,7 +50,7 @@
             | )
           = f.text_field :email, class: "form-control", data: {action: "focus->signup#hideTooltips click->signup#hideTooltips blur->signup#validateEmailFormat", target: 'signup.optionalEmail'}
           = f.hidden_field :invitation_id
-        - if true #Settings.aca.recaptcha_enabled
+        - if display_registration_recaptcha
           = recaptcha_tags
         .recaptcha-error.alert-error
         .recaptcha#captcha-widget
