--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -53,7 +53,7 @@
             <div class="modal-footer" style="padding:10px">
               <center>
               <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
-              <%=link_to l10n("proceed") , 'https://dc.checkbookhealth.org/sadpi/dc/2019/', class: "btn btn-primary" %>
+              <%=link_to l10n("proceed") , l10n("checkbook_sadpi_health_url"), class: "btn btn-primary" %>
             </div>
           <div class="modal-footer" style="padding:10px">
             <center>
@@ -78,7 +78,7 @@
             <div class="modal-footer" style="padding:10px">
               <center>
               <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
-              <%=link_to l10n("proceed") , 'https://dc.checkbookhealth.org/dc/', class: "btn btn-primary  mtz", target: '_blank'  %>
+              <%=link_to l10n("proceed") , l10n("checkbook_health_url"), class: "btn btn-primary  mtz", target: '_blank'  %>
             </div>
           </center>
          </div>
