--- a/app/views/ui-components/v1/filters/_plan_filters.html.slim
+++ b/app/views/ui-components/v1/filters/_plan_filters.html.slim
@@ -41,7 +41,7 @@
         .modal-footer style="padding:10px"
           center
             button.btn.btn-default.btn-default data-dismiss="modal" type="button"  Cancel
-            = link_to l10n("proceed") , 'https://dc.checkbookhealth.org/sadpi/dc/2019/', class: "btn btn-primary"
+            = link_to l10n("proceed") , l10n("sadpi_url"), class: "btn btn-primary"
 
   #plan_match_family.modal.fade role="document" tabindex="-1"
     .modal-dialog
