update hardcoded url

--- a/app/views/ui-components/v1/filters/_plan_filters.html.slim
+++ b/app/views/ui-components/v1/filters/_plan_filters.html.slim
@@ -71,7 +71,7 @@
         .modal-footer style="padding:10px"
           center
             button.btn.btn-default.btn-default data-dismiss="modal" type="button" Cancel
-            = link_to l10n("proceed") , Rails.application.config.checkbook_services_base_url + '/dcshopnationwide/' , class: "btn btn-primary",target: '_blank'
+            = link_to l10n("proceed") , Rails.application.config.checkbook_services_base_url + l10n("dc_shop_nation_wide") , class: "btn btn-primary",target: '_blank'
   #plan_match_shop.modal.fade role="document" tabindex="-1"
     .modal-dialog
       .modal-content
