--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -121,7 +121,7 @@
             <div class="modal-footer" style="padding:10px">
               <center>
               <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
-              <%=link_to l10n("proceed") , Rails.application.config.checkbook_services_base_url + l10n("dc_shop_nation_wide") , class: "btn btn-primary",target: '_blank'%>
+              <%= link_to l10n("proceed") , sanitize(Rails.application.config.checkbook_services_base_url + l10n("dc_shop_nation_wide")) , class: "btn btn-primary",target: '_blank'%>
             </div>
           </center>
          </div>
