--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -32,7 +32,7 @@
             <div class="modal-footer" style="padding:10px">
               <center>
               <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
-              <%=link_to l10n("proceed") , @dc_individual_checkbook_url, class: "btn btn-primary checkbook_url" %>
+              <%=link_to sanitize(l10n("proceed")) , sanitize(@dc_individual_checkbook_url), class: "btn btn-primary checkbook_url" %>
             </center>
             </div>
          </div>
@@ -53,12 +53,12 @@
             <div class="modal-footer" style="padding:10px">
               <center>
               <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
-              <%=link_to l10n("proceed") , l10n("checkbook_sadpi_health_url"), class: "btn btn-primary" %>
+              <%=link_to sanitize(l10n("proceed")) , sanitize(l10n("checkbook_sadpi_health_url")), class: "btn btn-primary" %>
             </div>
           <div class="modal-footer" style="padding:10px">
             <center>
             <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
-            <%=link_to l10n("proceed") , @dc_individual_checkbook_url, class: "btn btn-primary checkbook_url" %>
+            <%=link_to sanitize(l10n("proceed")) , sanitize(@dc_individual_checkbook_url), class: "btn btn-primary checkbook_url" %>
           </center>
          </div>
       </div>
@@ -78,7 +78,7 @@
             <div class="modal-footer" style="padding:10px">
               <center>
               <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
-              <%=link_to l10n("proceed") , l10n("checkbook_health_url").html_safe, class: "btn btn-primary  mtz", target: '_blank'  %>
+              <%=link_to sanitize(l10n("proceed")) , sanitize(l10n("checkbook_health_url")), class: "btn btn-primary  mtz", target: '_blank'  %>
             </div>
           </center>
          </div>
@@ -100,7 +100,7 @@
             <div class="modal-footer" style="padding:10px">
               <center>
               <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
-              <%=link_to l10n("proceed"), @plan_comparison_checkbook_url , class: "btn btn-primary" %>
+              <%=link_to sanitize(l10n("proceed")), sanitize(@plan_comparison_checkbook_url) , class: "btn btn-primary" %>
             </div>
           </center>
          </div>
