--- a/components/financial_assistance/app/views/financial_assistance/applications/review.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applications/review.html.erb
@@ -296,8 +296,8 @@
           <% end %>
           <% if FinancialAssistanceRegistry.feature_enabled?(:primary_caregiver_relationship_other_question) %>
             <div class="row row-form-wrapper ptb no-buffer row-height form-content">
-              <div class="col-md-6"><%= l10n("faa.primary_caretaker_for_text") %></div>
-              <div class="col-md-6"><%= applicant.is_primary_caregiver_for %></div>
+              <div class="col-md-6"><%= l10n("faa.primary_caretaker_for_text_review_page") %></div>
+              <div class="col-md-6"><%= applicant.is_primary_caregiver_for&.collect{|hbx_id| person_full_name_by_hbx_id(hbx_id) }&.compact %></div>
             </div>
           <% end %>
           <div class="row row-form-wrapper ptb no-buffer row-height form-content">
