--- a/components/financial_assistance/app/views/financial_assistance/applications/raw_application.yml.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applications/raw_application.yml.erb
@@ -60,5 +60,5 @@
         Does this person have a disability?:  <%= applicant.is_physically_disabled %>
         <% if applicant.age_of_the_applicant >= 19 && applicant.is_applying_coverage %>
         Is this person the main person taking care of any children age 18 or younger?: <%= applicant.is_primary_caregiver %>
-        Which member(s) of the household is this person the caretaker for?: <%=  applicant.is_primary_caregiver_for.collect{|hbx_id| @applicants_name_by_hbx_id_hash[hbx_id]}&.compact %>
+        Which member(s) of the household is this person the caretaker for?: <%=  applicant.is_primary_caregiver_for&.collect{|hbx_id| @applicants_name_by_hbx_id_hash[hbx_id]}&.compact %>
         <% end %>
