--- a/app/javascript/css/enrollment.scss
+++ b/app/javascript/css/enrollment.scss
@@ -12,6 +12,8 @@
           margin: 0;
           padding-left: 12px;
           flex-grow: 1;
+          line-height: 0;
+          font-size: medium;
         }
 
         .plan-status-container {
