debug root cause for lazy loading

--- a/app/views/insured/families/_enrollment.html.erb
+++ b/app/views/insured/families/_enrollment.html.erb
@@ -1,8 +1,11 @@
 <% can_make_changes_for_enrollment = hbx_enrollment.can_make_changes? %>
 
 <% if hbx_enrollment.is_coverage_waived? %>
-  <%= render partial: 'insured/families/waived_coverage_widget', locals: { read_only: read_only || can_make_changes_for_enrollment , hbx_enrollment: hbx_enrollment } %>
-
+  <%= logger.info "WAIVED COVERAGE WIDGET START TimeNow: #{Time.now}" %>
+  <%= benchmark_measure = Benchmark.measure do %>
+    <%= render partial: 'insured/families/waived_coverage_widget', locals: { read_only: read_only || can_make_changes_for_enrollment , hbx_enrollment: hbx_enrollment } %>
+    <%= logger.info "WAIVED COVERAGE WIDGET END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
+  <% end %> 
 <% else %>
   <% product = hbx_enrollment.product %>
   <div class="module hbx-enrollment-panel panel panel-default <%= "initially_hidden_enrollment hidden" if initially_hide_enrollment?(hbx_enrollment) %>">
@@ -14,7 +17,11 @@
           <%= hbx_enrollment.is_shop? ? hbx_enrollment.employer_profile.legal_name : l10n("insured.families.individual_and_family") %>
         </span>
       </h3>
-      <%= render partial: "insured/families/enrollment_progress", locals: {step: hbx_enrollment.enroll_step, hbx_enrollment: hbx_enrollment} %>
+      <%= logger.info "ENROLLMENT PROGRESS START TimeNow: #{Time.now}" %>
+      <%= benchmark_measure = Benchmark.measure do %>
+        <%= render partial: "insured/families/enrollment_progress", locals: {step: hbx_enrollment.enroll_step, hbx_enrollment: hbx_enrollment} %>
+        <%= logger.info "ENROLLMENT PROGRESS END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
+      <% end %>
     </div>
 
     <div class="panel-body">
@@ -32,7 +39,11 @@
           <div class="enrollment-premium info vertical-align-top">
             <p class="mb-0">
               <strong><%= l10n("premium_you_pay") %>:</strong>
-              <%= number_to_currency(current_premium(hbx_enrollment), precision: 2) %>/<%= l10n("month").to_s.downcase %>
+              <%= logger.info "CALCULATE CURRENT PREMIUM START TimeNow: #{Time.now}" %>
+              <%= benchmark_measure = Benchmark.measure do %>
+                <%= number_to_currency(current_premium(hbx_enrollment), precision: 2) %>/<%= l10n("month").to_s.downcase %>
+                <%= logger.info "CALCULATE CURRENT PREMIUM END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
+              <% end %>
             </p>
           </div>
           <% if hbx_enrollment.coverage_terminated? || hbx_enrollment.coverage_expired? || hbx_enrollment.coverage_termination_pending? %>
@@ -184,7 +195,11 @@
       <% if read_only == true %>
         <% if !hbx_enrollment.is_coverage_waived? %>
           <br/>
-          <%= render partial: "employers/census_employees/enrollment_details", locals: { enrollment:  hbx_enrollment} %>
+          <%= logger.info "ENROLLMENT DETAILS START TimeNow: #{Time.now}" %>
+          <%= benchmark_measure = Benchmark.measure do %>
+            <%= render partial: "employers/census_employees/enrollment_details", locals: { enrollment:  hbx_enrollment} %>
+            <%= logger.info "ENROLLMENT DETAILS END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
+          <% end %>
         <% end %>
       <% end %>
     </div>
@@ -192,14 +207,23 @@
     <div class="panel-footer">
       <div class="vertically-aligned-row">
         <div>
-          <%= render partial: "shared/plan_shoppings/sbc_link", locals: { plan: product } %>
+          <%= logger.info "SBC LINK START TimeNow: #{Time.now}" %>
+          <%= benchmark_measure = Benchmark.measure do %>
+            <%= render partial: "shared/plan_shoppings/sbc_link", locals: { plan: product } %>
+            <%= logger.info "SBC LINK END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}" %>
+          <% end %>
         </div>
         <div>
           <a class="vertically-aligned-row" data-toggle="modal" data-target="#<%= product.kind.to_s %>-<%= product.id %>-<%= hbx_enrollment.hbx_id%>">
             <i class="fa fa-phone fa-2x"></i>
             <span class="col-xs-11 enrollment-tile-summary"><%= l10n("plan_contact_info") %></span>
           </a>
-          <%= render partial: "shared/#{Settings.aca.state_abbreviation.downcase}_carrier_contact_information", locals: { plan: product, hbx_enrollment: hbx_enrollment } unless product.issuer_profile.blank? %>
+          <%= logger.info "CARRIER CONTACT INFORMATION START TimeNow: #{Time.now}" %>
+          <%= benchmark_measure = Benchmark.measure do %>
+            <%= render partial: "shared/#{Settings.aca.state_abbreviation.downcase}_carrier_contact_information", locals: { plan: product, hbx_enrollment: hbx_enrollment } unless product.issuer_profile.blank? %>
+            <%= logger.info "CARRIER CONTACT INFORMATION END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
+          <% end %>
+
         </div>
         <% if !read_only == true %>
           <div class="col-lg-3">
@@ -223,7 +247,11 @@
                     <%= pundit_span Family, :updateable? %>
                       <!-- Use turbolinks: false, to avoid calling controller action twice-->
                       <a href="<%= new_insured_group_selection_path(person_id: @person.id, employee_role_id: @employee_role.try(:id), change_plan: 'change_plan', hbx_enrollment_id: hbx_enrollment.id, coverage_kind: hbx_enrollment.coverage_kind) %>" class='btn-link btn-block dropdown-item ee-make-changes' id='make-changes-btn' style='padding: 6px 12px; margin: 4px 0;' disabled=<%= !can_make_changes_for_enrollment %> data-turbolinks='false' >
-                        <%= render partial:"shared/glossary_hover", locals: {key: "make_changes_to_coverage", title: "Make changes to my plan", term: sanitize(l10n('make_changes')) } %>
+                        <%= logger.info "GLOSSARY HOVER MAKE CHANGES START TimeNow: #{Time.now}" %>
+                        <%= benchmark_measure = Benchmark.measure do %>
+                          <%= render partial:"shared/glossary_hover", locals: {key: "make_changes_to_coverage", title: "Make changes to my plan", term: sanitize(l10n('make_changes')) } %>
+                          <%= logger.info "GLOSSARY HOVER MAKE CHANGES END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
+                        <% end %>   
                       </a>
                     </span>
                   <!-- This potentially allows certain shop users to view Make Changes -->
@@ -263,7 +291,11 @@
   </div>
 
   <% if hbx_enrollment.product.present? && enrollment_is_ivl_or_coverall?(hbx_enrollment) %>
-    <%= render "shared/pay_now_modal", hbx_enrollment: hbx_enrollment, source: "enrollment_tile" %>
+    <%= logger.info "PAY NOW MODAL START TimeNow: #{Time.now}" %>
+    <%= benchmark_measure = Benchmark.measure do %>
+      <%= render "shared/pay_now_modal", hbx_enrollment: hbx_enrollment, source: "enrollment_tile" %>
+      <%= logger.info "PAY NOW MODAL END TimeNow: #{Time.now}, benchmark_measure: #{benchmark_measure}, HBXID: #{hbx_enrollment.hbx_id}" %>
+    <% end %>  
   <% end %>
 
 <% end %>
