--- a/app/views/shared/_individual_progress.html.haml
+++ b/app/views/shared/_individual_progress.html.haml
@@ -36,7 +36,7 @@
       %span.circle-progress
       .vertical-line-progress
       Complete
-    
+
 - if step == 1 && search_page == true
   = link_to "Continue", insured_consumer_role_index_path(person: @person_params), method: :post, class: 'btn btn-lg btn-primary  btn-block'
 - elsif step == 1
@@ -72,25 +72,4 @@
 - else
   %button.btn.btn-lg.btn-primary.btn-block#btn-continue{type: 'submit'}
     CONTINUE
-%ul.list-unstyled.list-right-section
-  - unless @no_previous_button || step == 1
-    %li
-      %a.back{href: '#'}
-        <!-- = image_tag 'icons/list.png' -->
-        PREVIOUS
-  - unless @no_save_button
-    %li
-      %a{href: destroy_user_session_path}
-        <!-- = image_tag 'icons/list.png' -->
-        SAVE &amp; EXIT
-      %br
-      %br
-    %li
-      %p
-        If you select Save & Exit, you can save your work and continue where you left off the next time you login.
-    %br.clear
-- if step != 1
-  = render partial: 'shared/help_me_sign_up'
-  = render partial: 'ui-components/v1/modals/help_with_plan'
-</span>
-
+= render partial: 'shared/shopping_nav_panel', locals: {step: step}
